trying firebase for the firsttime

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pratap-panabaka-react-vite-tailwind-template",
+  "name": "aconews",
   "private": true,
   "version": "0.0.0",
   "type": "module",
